# mmm-vocabulary-mapping

./: .dockerignore  .env.example  .gitignore  ATTRIBUTION.md  LICENSE  NOTICE  PROVENANCE.md  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.ohdsi-vocab  Dockerfile.omcp  Dockerfile.webapp  webapp-entrypoint.sh
docs/: RUNBOOK.md
mcp_server/: db.py  formatting.py  pyproject.toml  server.py
mcp_server/core/: __init__.py  phenotype.py  query_library.py
mcp_server/prompts/: concept_search.py
mcp_server/resources/: omop_docs.py
mcp_server/schemas/: README.md  omop_cdm_schema.json
mcp_server/scripts/: download_phenotype_library.sh  download_query_library.sh
mcp_server/tests/: conftest.py  test_auto_staging.py  test_phenotype_library.py  test_query_library.py  test_resources.py  test_result_curation.py
mcp_server/tools/: _staging_mixin.py  concept_hierarchy.py  concept_lookup.py  concept_relationships.py  concept_set.py  concept_set_resolver.py  graph_exploration.py  graph_pathfinding.py  phenotype_library.py  phenotype_simplifier.py  query_library.py  result_curation.py  search_concepts.py  standard_mapping.py  standard_via_nonstandard.py  table_schema.py  term_grounding.py
mmm_pipeline/docs/: graph_tools_and_semantic_search.md  methodology.md  miss_categories.md  omop_graph_integration.md  overview.md  prompt_engineering.md  request_lifecycle.md  technology_stack.md
mmm_pipeline/results/: submission_opus.xlsx
mmm_pipeline/scripts/: generate_embeddings_nonstandard.sh  (+6 more)
omcp/: pyproject.toml
omop_vocab_core/: LICENSE.omop-graph  THIRD_PARTY_NOTICES.md  pyproject.toml
omop_vocab_core/src/omop_vocab_core/: __init__.py  concept_lookup.py  concept_set.py  concept_set_resolver.py  db.py  embedding_search.py  formatting.py  graph_cache.py  graph_queries.py  graph_types.py  hierarchy.py  nonstandard_resolver.py  pathfinding.py  phenotype_simplifier.py  relationships.py  search.py  staging.py  standard_mapping.py  subgraph.py  table_schema.py  term_grounding.py
omop_vocab_core/tests/: test_staging.py
scripts/: start.sh
webapp/: pyproject.toml
webapp/backend/: agent.py  auth.py  config.py  main.py  mcp_client.py  models.py  observability.py  session.py
webapp/backend/providers/: __init__.py  base.py  claude.py  ollama.py  openai_compat.py
(+8 files in other folders)
