[project]
name = "ohdsi-vocab-mcp"
version = "0.1.0"
description = "OHDSI OMOP Vocabulary MCP Server — concept search, hierarchy, and concept set tools"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
    "duckdb>=1.4.4",
    "omop-vocab-core[embeddings]",
]

[project.scripts]
ohdsi-vocab-mcp = "server:main"

[tool.uv.sources]
omop-vocab-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
