[project]
name = "ohdsi-agent-webapp"
version = "0.1.0"
description = "OHDSI Agent webapp — FastAPI backend with MCP client"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "fastmcp>=2.0.0",
    "langfuse>=3.0.0",
]

# The backend is run via uvicorn (backend.main:app), not installed as a package,
# so uv should resolve/install dependencies only — not try to build this project.
[tool.uv]
package = false
